crates/gardswag-syntax/src/snapshots/gardswag_syntax__tests__record.snap
---
source: crates/gardswag-syntax/src/tests.rs
expression: "parse(r#\"\n                let id = \\x x;\n                .{\n                   id = id;\n                   id2 = id;\n                   torben = id 1;\n                }\n            \"#).unwrap()"
---
- - id
  - x
  - id2
  - torben
- stmts: []
  term:
    offset: 17
    inner:
      Let:
        lhs:
          offset: 21
          inner: 1
          extra: ~
        rhs:
          offset: 26
          inner:
            Lambda:
              arg:
                offset: 27
                inner: 2
                extra: ~
              body:
                offset: 29
                inner:
                  Identifier: 2
                extra: ~
          extra: ~
        rest:
          stmts: []
          term:
            offset: 48
            inner:
              Record:
                1:
                  offset: 75
                  inner:
                    Identifier: 1
                  extra: ~
                3:
                  offset: 104
                  inner:
                    Identifier: 1
                  extra: ~
                4:
                  offset: 136
                  inner:
                    Call:
                      prim:
                        offset: 136
                        inner:
                          Identifier: 1
                        extra: ~
                      arg:
                        offset: 139
                        inner:
                          Integer: 1
                        extra: ~
                  extra: ~
            extra: ~
    extra: ~

